--- a/Homeworks/CSS/01_CSS/add/index.html
+++ b/Homeworks/CSS/01_CSS/add/index.html
@@ -2,7 +2,7 @@
 <HTML> 
 <HEAD>
     <META charset="utf-8">
-        <TITLE>Пример страницыjllh;i</TITLE>
+        <TITLE>Пример страницыkgvuobhipnhjkjllh;i</TITLE>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
