--- a/Homeworks/CSS/02_CSS/base/index2.html
+++ b/Homeworks/CSS/02_CSS/base/index2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Documentdzxfcgvhbjnkm,l</title>
 </head>
 <body>
     <ul>
