--- a/Homeworks/CSS/02_CSS/base/index1.html
+++ b/Homeworks/CSS/02_CSS/base/index1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document lbjhb;hbkj</title>
+    <title>Document</title>
     <style>
 
     .card1{
