HTML_05_base_worked_on_mistakes_(forms)_

--- a/Homeworks/HTML/05_HTML/base/index.html
+++ b/Homeworks/HTML/05_HTML/base/index.html
@@ -17,7 +17,7 @@
                     <input type="submit" value="искать">
                     <br> 
                     <input type="radio" id="site_search1" name="radio1" value="site">
-                    <label for="site_search">на сайте</label>
+                    <label for="site_search1">на сайте</label>
                     <input type="radio" id="google_search1" name="radio1" value="search">
                     <label for="google_search">в google</label>
                     <br>
@@ -59,7 +59,7 @@
                     <br> 
                     <input type="text" name="password" placeholder="это обязательное поле" required ((?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,15}) >* Пароль
                     <br>
-                    <input type="checkbox" name="forever">
+                    <input type="checkbox" name="forever" id="forever">
                     <label for="forever">Оставаться в системе</label>
                     <br>
                     <input type="submit" value="войти">
