--- a/Homeworks/CSS/02_CSS/base/index2.html
+++ b/Homeworks/CSS/02_CSS/base/index2.html
@@ -3,14 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <style>
+        ul {
+            list-style-type: upper-roman;
+            font-weight: bold;    
+        }
+        
+        .style {
+            list-style-type: lower-roman;
+            font-weight: normal;  
+        }
+
+        .code {
+            width: 400px;
+            height: 4em;
+            color: rgb(0, 250, 0);
+            background-color: black;
+            white-space: pre;
+            overflow: auto;
+        }
+
+    </style>
 </head>
 <body>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Контейнер с кодом
+            <ul class="style">
+                <li>Цвет фона: черный</li>
+                <li>Цвет текста: зеленый</li>
+                <li>Ширина: 400px</li>
+                <li>Максимальная высота контейнера: 4-ре строки</li>
+                <li>Переполнение: автоматическое</li>
+            </ul>
+        </li>
+        <li>Список
+            <ul class="style">
+                <li>Ширина: 350px</li>
+                <li>Тип списка: римские цифры</li>
+                <li>Тип вложенного списка: нижний регистр цифры</li>
+            </ul>
+        </li>
     </ul>
+    <div class="code">
+        <code>
+        #!/usr/bin/env python
+        print 'HELLO. i'm a python program'
+        name = raw input("What is your name&")
+        print "Hello there, " + name + "!"
+        #!/usr/bin/env python
+        print 'HELLO. i'm a python program'
+        name = raw input("What is your name&")
+        print "Hello there, " + name + "!"
+        </code>
+    </div>
+
 </body>
 </html>
