--- a/Homeworks/CSS/02_CSS/base/index2.html
+++ b/Homeworks/CSS/02_CSS/base/index2.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <style>
+        header {
+            width: 350px;
+        }
         ul {
             list-style-type: upper-roman;
             font-weight: bold;    
@@ -17,6 +20,8 @@
         .code {
             width: 400px;
             height: 4em;
+            padding: 1px;
+            /*Паддинг не работает, не пойму почему*/
             color: rgb(0, 250, 0);
             background-color: black;
             white-space: pre;
@@ -26,35 +31,37 @@
     </style>
 </head>
 <body>
-    <ul>
-        <li>Контейнер с кодом
-            <ul class="style">
-                <li>Цвет фона: черный</li>
-                <li>Цвет текста: зеленый</li>
-                <li>Ширина: 400px</li>
-                <li>Максимальная высота контейнера: 4-ре строки</li>
-                <li>Переполнение: автоматическое</li>
-            </ul>
-        </li>
-        <li>Список
-            <ul class="style">
-                <li>Ширина: 350px</li>
-                <li>Тип списка: римские цифры</li>
-                <li>Тип вложенного списка: нижний регистр цифры</li>
-            </ul>
-        </li>
-    </ul>
+    <header>
+        <ul>
+            <li>Контейнер с кодом
+                <ul class="style">
+                    <li>Цвет фона: черный</li>
+                    <li>Цвет текста: зеленый</li>
+                    <li>Ширина: 400px</li>
+                    <li>Максимальная высота контейнера: 4 строки</li>
+                    <li>Переполнение: автоматическое</li>
+                </ul>
+            </li>
+            <li>Список
+                <ul class="style">
+                    <li>Ширина: 350px</li>
+                    <li>Тип списка: римские цифры</li>
+                    <li>Тип вложенного списка: нижний регистр цифры</li>
+                </ul>
+            </li>
+        </ul>
+    </header>
     <div class="code">
         <code>
-        #!/usr/bin/env python
-        print 'HELLO. i'm a python program'
-        name = raw input("What is your name&")
-        print "Hello there, " + name + "!"
-        #!/usr/bin/env python
-        print 'HELLO. i'm a python program'
-        name = raw input("What is your name&")
-        print "Hello there, " + name + "!"
-        </code>
+            #!/usr/bin/env python
+            print 'HELLO. i'm a python program'
+            name = raw input("What is your name&")
+            print "Hello there, " + name + "!"
+            #!/usr/bin/env python
+            print 'HELLO. i'm a python program'
+            name = raw input("What is your name&")
+            print "Hello there, " + name + "!"
+        </code> 
     </div>
 
 </body>
