CSS_02_add_1_partially_done

--- a/Homeworks/CSS/02_CSS/add/index1.html
+++ b/Homeworks/CSS/02_CSS/add/index1.html
@@ -5,16 +5,26 @@
     
     <title>Document</title>
     <style>
-    body {
+    div {
+            width: 80%;
+            padding: 2em;
+            background-color: beige;
             background-image: url(img/b-l.gif), url(img/b-r.gif), url(img/t-l.gif) , url(img/t-r.gif), 
             url(img/b.gif) , url(img/t.gif), url(img/l.gif), url(img/r.gif);
+            background-repeat:no-repeat, no-repeat, no-repeat, no-repeat, 
+            repeat-x, repeat-x, repeat-y, repeat-y;
             background-position: bottom left, bottom right, top left, top right, 
             bottom, top, left, right;
-            background-repeat:no-repeat;
-    }
+        }
     </style>
 </head>
 <body>
-    
+    <div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse amet, enim ut laboriosam suscipit in 
+            tenetur cupiditate omnis reiciendis, accusantium repellat voluptatem eaque, explicabo modi soluta 
+            delectus nam facilis! Debitis.
+        </p>
+    </div>
 </body>
 </html>
