CSS_03_04_partially_done

--- a/Homeworks/CSS/02_CSS/base/index3.html
+++ b/Homeworks/CSS/02_CSS/base/index3.html
@@ -3,36 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <style>
-        .navigation {
-            width: 15em;
-            background-color: rgba(145, 127, 127, 0.116);
-            float: left;
-            margin-bottom: .2em;
-        }
-        .article {
-            background-color: rgba(0, 0, 211, 0.295);
-            margin-bottom: .2em;
-            margin-left: 246px;
-        }
-        img {
-            float: right;
-            border-radius: 15px;
-        }
-        .clear {
-            clear:both;
-        }
-        .footer {
-            background-color: rgba(120, 134, 123, 0.233);
-            clear: both;
-        }
-        .wrap {
-            background-color: rgba(3, 3, 3, 0.007);
-            clear:both;
-        }
-       
-        
-    </style>
+    <link rel="stylesheet" href="style-4.css">
 </head>
 <body>
     <div class="wrap">
@@ -47,14 +18,14 @@
                 </li>
             </ul>
          </div>
-        <div class="article" name="1">
+        <div class="article1" name="1">
             <strong>Статья 1</strong> <br><br>
             Размер блока :<br>
             Занимает всю доступную ширину<br>
             Должен присутствовать цвет фона<br>
             Во всех статьях сделайте отступ, равный .2em, при помощи margin-bottom
         </div>
-        <div class="article" name="2">
+        <div class="article2" name="2">
             <strong>Статья 2</strong> <br><br>
             Размер блока:<br>
             Занимает всю доступную ширину<br>
