--- a/Homeworks/CSS/02_CSS/add/DIV_FRAME/index4.html
+++ b/Homeworks/CSS/02_CSS/add/DIV_FRAME/index4.html
@@ -2,20 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        /*div.border { height: 100%; width: 100%;}
-        div.top-left { background-image: url('../img/t-l.gif') no-repeat top left; }
-        div.top-right { background-image: url('../img/t-r.gif') no-repeat top right; }
-        div.bottom-right { background-image: url('../img/b-r.gif') no-repeat bottom right;}
-        div.bottom-left { background-image: url('../img/b-l.gif') no-repeat bottom left;}
-        div.top { background-image: url('../img/t.gif') repeat-x;}
-        div.bottom {background-image: url('../img/b.gif') repeat-x;}
-        div.left {background-image: url('../img/l.gif') repeat-y; }
-        div.right {background-image: url('../img/r.gif') repeat-y; }*/
-        div {
+        .border { height: 100%; width: 100%;}
+        .top-left { background-image: url('../img/t-l.gif') no-repeat }
+        
+       /* div {
             width: 90%; 
             padding: 3em;
             background-image: 
@@ -29,7 +21,7 @@
             url(../img/background/img/b.png);
             background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, repeat-y, repeat-y, repeat-x, repeat-x;
             background-position: bottom right, bottom left, top left, top right, left, right, top, bottom;
-        }
+        }*/
 
 
     </style>
