CSS_04_partially_done

--- a/Homeworks/CSS/04_CSS/base/index2.html
+++ b/Homeworks/CSS/04_CSS/base/index2.html
@@ -3,24 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <style>
-        tr {border-style: dotted ;
-
-
-        }
-
-    </style>
+    <link rel="stylesheet" href="style_2.css">
 
 </head>
 <body>
     <table>
         <tr>
-            <td>ФИО</td>
-            <td>пол</td>
-            <td>должность</td>
-            <td>дата рож.</td>
-            <td>данные01</td>
-            <td>данные02</td>
+            <th>ФИО</th>
+            <th>пол</th>
+            <th>должность</th>
+            <th>дата рож.</th>
+            <th>данные01</th>
+            <th>данные02</th>
         </tr>
         <tr>
             <td>Иванов Иван Иванович</td>
