edited_hw_css_02_03

--- a/Homeworks/CSS/02_CSS/add/DIV_FRAME/index4.html
+++ b/Homeworks/CSS/02_CSS/add/DIV_FRAME/index4.html
@@ -4,55 +4,26 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <style>
-        .border { height: 100%; width: 100%;}
-        .top-left { background-image: url('../img/t-l.gif') no-repeat }
-        
-       /* div {
-            width: 90%; 
-            padding: 3em;
-            background-image: 
-            url(../img/background/img/r-b.png), 
-            url(../img/background/img/l-b.png), 
-            url(../img/background/img/l-t.png),
-            url(../img/background/img/r-t.png),
-            url(../img/background/img/l.png),
-            url(../img/background/img/r.png), 
-            url(../img/background/img/t.png), 
-            url(../img/background/img/b.png);
-            background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, repeat-y, repeat-y, repeat-x, repeat-x;
-            background-position: bottom right, bottom left, top left, top right, left, right, top, bottom;
-        }*/
-
-
+        div {
+        border: 50px solid #40c4c8;
+        padding: 1em;
+        border-image: url(../img/background/img/ramka.png)  111 round round;
+       }
     </style>
 </head>
 <body>
-    <div class="border top-left">
-        <div class="border top">
-           <div class="border top-right">
-              <div class="border right">
-                <div class="border bottom-right">
-                    <div class="border bottom">
-                        <div class="border bottom-left">
-                            <div class="border left">
-                                <div id="content">
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus optio, 
-                                    laborum quos dignissimos consequatur voluptas architecto, illum repellendus 
-                                    nemo blanditiis officia, tempora hic! Debitis hic asperiores dolorum ab voluptatibus! Maiores.
-                                    Non quidem quisquam vero sed doloremque corporis dignissimos delectus quis 
-                                    magnam nam accusamus nisi ex velit magni quaerat consequatur similique ipsa 
-                                    olestias, libero vel, tempora blanditiis! Placeat nulla quo facilis?
-                                    Voluptates suscipit sed nobis ducimus quidem sint deserunt eveniet. Quisquam 
-                                    modi vero molestiae veniam quibusdam dolores quia temporibus animi voluptas quidem?
-                                    Quas nihil a aliquam id dicta, placeat animi blanditiis!
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-              </div>
-           </div>
-        </div>
-     </div>
+    <div>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus optio, 
+            laborum quos dignissimos consequatur voluptas architecto, illum repellendus 
+            nemo blanditiis officia, tempora hic! Debitis hic asperiores dolorum ab voluptatibus! Maiores.
+            Non quidem quisquam vero sed doloremque corporis dignissimos delectus quis 
+            magnam nam accusamus nisi ex velit magni quaerat consequatur similique ipsa 
+            molestias, libero vel, tempora blanditiis! Placeat nulla quo facilis?
+            Voluptates suscipit sed nobis ducimus quidem sint deserunt eveniet. Quisquam 
+            modi vero molestiae veniam quibusdam dolores quia temporibus animi voluptas quidem?
+             Quas nihil a aliquam id dicta, placeat animi blanditiis!
+        </p>
+    </div>
 </body>
 </html>
