--- a/Homeworks/CSS/02_CSS/base/index3.html
+++ b/Homeworks/CSS/02_CSS/base/index3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="style-4.css">
+    <link rel="stylesheet" href="style-3.css">
 </head>
 <body>
     <div class="wrap">
@@ -18,14 +18,14 @@
                 </li>
             </ul>
          </div>
-        <div class="article1" name="1">
+        <div class="article" name="1">
             <strong>Статья 1</strong> <br><br>
             Размер блока :<br>
             Занимает всю доступную ширину<br>
             Должен присутствовать цвет фона<br>
             Во всех статьях сделайте отступ, равный .2em, при помощи margin-bottom
         </div>
-        <div class="article2" name="2">
+        <div class="article" name="2">
             <strong>Статья 2</strong> <br><br>
             Размер блока:<br>
             Занимает всю доступную ширину<br>
