--- a/Homeworks/CSS/02_CSS/add/DIV_FRAME/index3.html
+++ b/Homeworks/CSS/02_CSS/add/DIV_FRAME/index3.html
@@ -4,26 +4,60 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <style>
-        div {
-        border: 50px solid #40c4c8;
-        padding: 1em;
-        border-image: url(../img/background/img/ramka.png)  111 round round;
-       }
+
+        /*Перепробовала все, запуталась, подскажите пожалуйста, как правильно?*/
+        
+        /*.border { height: 100%; width: 100%;}
+        .top-left { 
+            position: top left; 
+        }
+        .top {
+            position: top;
+        }
+        .top-right {
+            position: ;
+        }*/
+        
+        /*div {
+            width: 90%; 
+            padding: 3em;
+            background-image: 
+            url(../img/background/img/r-b.png), 
+            url(../img/background/img/l-b.png), 
+            url(../img/background/img/l-t.png),
+            url(../img/background/img/r-t.png),
+            url(../img/background/img/l.png),
+            url(../img/background/img/r.png), 
+            url(../img/background/img/t.png), 
+            url(../img/background/img/b.png);
+            background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, repeat-y, repeat-y, repeat-x, repeat-x;
+            background-position: bottom right, bottom left, top left, top right, left, right, top, bottom;
+        }*/
+
+
     </style>
 </head>
 <body>
-    <div>
-        <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus optio, 
-            laborum quos dignissimos consequatur voluptas architecto, illum repellendus 
-            nemo blanditiis officia, tempora hic! Debitis hic asperiores dolorum ab voluptatibus! Maiores.
-            Non quidem quisquam vero sed doloremque corporis dignissimos delectus quis 
-            magnam nam accusamus nisi ex velit magni quaerat consequatur similique ipsa 
-            molestias, libero vel, tempora blanditiis! Placeat nulla quo facilis?
-            Voluptates suscipit sed nobis ducimus quidem sint deserunt eveniet. Quisquam 
-            modi vero molestiae veniam quibusdam dolores quia temporibus animi voluptas quidem?
-             Quas nihil a aliquam id dicta, placeat animi blanditiis!
-        </p>
-    </div>
+    <div class="border top-left" alighn="top left"> <img src="../img/t-l.gif">
+        <div class="border top" alighn="center"><img scr="../img/top"> 
+           <div class="border top-right"><img src="../img/t-r.gif">
+              <div class="border right"><img src="../img/r.gif">
+                <div class="border bottom-right"><img src="../img/b-r.gif">
+                    <div class="border bottom"><img src="../img/b.gif">
+                        <div class="border bottom-left"><img src="../img/b-l.gif">
+                            <div class="border left"><img src="../img/l.gif">
+                                <div id="content">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nesciunt esse facilis, 
+                                    similique qui ex eligendi possimus sequi odit quos magnam eius veniam expedita, laborum, 
+                                    dolore sed quia aliquid molestias.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+           </div>
+        </div>
+     </div>
 </body>
 </html>
