--- a/Homeworks/CSS/04_CSS/add/index1.html
+++ b/Homeworks/CSS/04_CSS/add/index1.html
@@ -10,27 +10,27 @@
     <h1>Форматы файлов.</h1>
     <div>
         
-        .DOC или .doc (от англ.- <a href="../base/img/zip.png" class="Link">.document </a>) - 
+        .DOC или .doc (от англ.- <a href="../base/img/zip.png">.document </a>) - 
         расширение имени файла, используемое для файлов, представляющих текст, с разметкой или без.
         Расширешие .DOC часто использовалось для обозначения
         простых текстовых файлов без формирования, однако позже 
         стало использоваться для двоичных форматов с разметкой . <br>
-        <a href="../base/img/word.jpg" class="Link">Документ MS Word </a>
+        <a href="../base/img/word.jpg" >Документ MS Word </a>
     </div>
     <div>
-        Portable Document Format (<a href="../base/img/pdf.png" class="Link">PDF </a>) - межплатформенный формат 
+        Portable Document Format (<a href="../base/img/pdf.png">PDF </a>) - межплатформенный формат 
         электронных документов, разработанный фирмой Adobe Systems с ииспользованием
         ряда возможностей языка Postscript. <br>
-        <a href="../base/img/pdf.png" class="Link">Документ PDF </a>
+        <a href="../base/img/pdf.png">Документ PDF </a>
     </div>
     <div>
         ZIP - популярный формат сжатия данных и архивации файлов. 
         Файл в этом формате обычно имеет расширение 
-       <a href="../base/img/archive.gif" class="Link">.zip </a> и хранит 
+       <a href="../base/img/archive.gif">.zip </a> и хранит 
         в сжатом или несжатом виде один или несколько файлов ,
         которые можно из него извлечь путеи распаковки с помощью 
         специальной программы. <br>
-        <a href="../base/img/archive.gif" class="Link">Архив </a> 
+        <a href="../base/img/archive.gif">Архив </a> 
     </div>
 
     <h2>Это список файлов</h2>
